Add RadNETZ description

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -29,29 +29,33 @@
 
 	<p>Die Soll-Fahrplandaten des öffentlichen Personennahverkehrs (ÖPNV inkl. SPNV) in Baden-Württemberg werden über die <a href="/gtfs">GTFS-API</a> publiziert.</p>
 
-	<p>So liefert etwa der <a href="/gtfs/stops">Endpunkt <code>/gtfs/stops</code></a> alle ÖPNV inkl. SPNV Haltestellen, die von Bussen/Zügen in Baden-Württemberg aus erreichbar sind.</p>
+	<p>So liefert etwa der Endpunkt <a href="/gtfs/stops"><code>/gtfs/stops</code></a> alle ÖPNV inkl. SPNV Haltestellen, die von Bussen/Zügen in Baden-Württemberg aus erreichbar sind.</p>
 
 	<h2>Sharing-Daten</h2>
 
-	<p>Daten von Autos, Leihfahrrädern, Lastenrädern und E-Scootern werden über den gebündelten <a href="/sharing/gbfs">GBFS-Feed <code>/sharing/gbfs</code></a> publiziert, der seinerseits GBFS-Feeds für die einzelnen Provider aggregiert.</p>
+	<p>Daten von Autos, Leihfahrrädern, Lastenrädern und E-Scootern werden über den gebündelten GBFS-Feed <a href="/sharing/gbfs"><code>/sharing/gbfs</code></a> publiziert, der seinerseits GBFS-Feeds für die einzelnen Provider aggregiert.</p>
 
 	<h2>Parkdaten</h2>
 
-	<p>Parkdaten verschiedener Städte und Parkhausbetreiber werden über die <a href="/park-api/documentation/public.html">ParkAPI unter <code>/park-api</code></a> publiziert.</p>
+	<p>Parkdaten verschiedener Städte und Parkhausbetreiber werden über die <a href="/park-api/documentation/public.html">ParkAPI</a> publiziert.</p>
 
-	<p>Die Endpunkte <a href="/park-api/api/public/v3/parking-sites"><code>/park-api/api/public/v3/parking-sites</code></a> und <a href="/park-api/api/public/datex2/json"><code>/park-api/api/public/datex2/json</code></a> liefern diese Daten im ParkAPI-Format und im Datex II Lite Format.</p>
+	<p>Die Endpunkte <a href="/park-api/api/public/v3/parking-sites"><code>/park-api/api/public/v3/parking-sites</code></a> und <a href="/park-api/api/public/datex2/json"><code>/park-api/api/public/datex2/json</code></a> liefern diese Daten im ParkAPI Format und im Datex II Lite Format.</p>
 
 	<h2>Ladesäulendaten</h2>
 
-	<p>Ladesäulendaten werden über die <a href="/ocpdb/documentation/public.html">Open ChargePoint DataBase (OCPDB) unter<code>/ocpdb/api</code></a> publiziert, wobei der Endpunkt <a href="/ocpdb/api/public/v1/locations"><code>/ocpdb/api/public/v1/locations</code></a> detaillierte Informationen aller Ladesäulen aufführt.</p>
+	<p>Ladesäulendaten werden über die <a href="/ocpdb/documentation/public.html">Open ChargePoint DataBase (OCPDB)</a> publiziert, wobei der Endpunkt <a href="/ocpdb/api/public/v1/locations"><code>/ocpdb/api/public/v1/locations</code></a> detaillierte Informationen aller Ladesäulen aufführt.</p>
 
 	<h2>Verkehrsmeldungen</h2>
 
-	<p>Verkehrsmeldungen werden über den <a href="/datasets/traffic/incidents-bw/TIC3-Meldungen.xml">Endpunkt <code>/datasets/traffic/incidents-bw/TIC3-Meldungen.xml</code></a> im TIC 3 Format publiziert. Die Verkehrsmeldungen werden alle 10 Minuten aktualisiert.</p>
+	<p>Verkehrsmeldungen werden über den Endpunkt <a href="/datasets/traffic/incidents-bw/TIC3-Meldungen.xml"><code>/datasets/traffic/incidents-bw/TIC3-Meldungen.xml</code></a> im TIC 3 Format publiziert. Die Verkehrsmeldungen werden alle 10 Minuten aktualisiert.</p>
+
+	<h2>Radverkehrs-Infrastruktur</h2>
+
+	<p>Das RadNETZ Baden-Württemberg wird über den Endpunkt <a href="/datasets/radvis/radnetz_bw.gpkg"><code>/datasets/radvis/radnetz_bw.gpkg</code></a> bzw. komprimiert <a href="/datasets/radvis/radnetz_bw.gpkg.gz"><code>/datasets/radvis/radnetz_bw.gpkg.gz</code></a> im GeoPackage Format publiziert.
 
 	<h2>Kartendienste</h2>
 
-	<p>Visualisierungen im WMS/WFS-Format bietet unser <a href="/geoserver">Geoserver unter <code>/geoserver</code></a> an, der für die vielfältigen Mobilitätsdaten unterschiedliche Layer enthält.</p>
+	<p>Visualisierungen im WMS/WFS-Format bietet unser Geoserver unter <a href="/geoserver"><code>/geoserver</code></a> an, der für die vielfältigen Mobilitätsdaten unterschiedliche Layer enthält.</p>
 
 	<p>Aktuelle Karten basierend auf den folgenden Geoserver Layern vermitteln ein anschauliches Bild von unseren Mobilitätsdaten.</p>
 
