Add BEMaS description

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -49,9 +49,13 @@
 
 	<p>Verkehrsmeldungen werden über den Endpunkt <a href="/datasets/traffic/incidents-bw/TIC3-Meldungen.xml"><code>/datasets/traffic/incidents-bw/TIC3-Meldungen.xml</code></a> im TIC 3 Format publiziert. Die Verkehrsmeldungen werden alle 10 Minuten aktualisiert.</p>
 
+	<h2>Baustellen und Ereignisse</h2>
+
+	<p>Daten des Baustellen- und Ereignismanagementsystems BEMaS werden über die Endpunkte <a href="/datasets/traffic/roadworks/roadworks_cifs.json"><code>/datasets/traffic/roadworks/roadworks_cifs.json</code></a>, <a href="/datasets/traffic/roadworks/roadworks_geojson.json"><code>/datasets/traffic/roadworks/roadworks_geojson.json</code></a> und <a href="/datasets/traffic/roadworks/roadworks_svzbw.datex2.xml"><code>/datasets/traffic/roadworks/roadworks_svzbw.datex2.xml</code></a> in den Formaten CIFS, GeoJSON und Datex II publiziert.</p>
+
 	<h2>Radverkehrs-Infrastruktur</h2>
 
-	<p>Das RadNETZ Baden-Württemberg wird über den Endpunkt <a href="/datasets/radvis/radnetz_bw.gpkg"><code>/datasets/radvis/radnetz_bw.gpkg</code></a> bzw. komprimiert <a href="/datasets/radvis/radnetz_bw.gpkg.gz"><code>/datasets/radvis/radnetz_bw.gpkg.gz</code></a> im GeoPackage Format publiziert.
+	<p>Das RadNETZ Baden-Württemberg wird vom Radverkehrs-Infrastruktur-System RadVIS über den Endpunkt <a href="/datasets/radvis/radnetz_bw.gpkg"><code>/datasets/radvis/radnetz_bw.gpkg</code></a> im GeoPackage Format publiziert.</p>
 
 	<h2>Kartendienste</h2>
 
