add roadworks/radvis_cycle_network maps

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -64,15 +64,17 @@
 	<p>Aktuelle Karten basierend auf den folgenden Geoserver Layern vermitteln ein anschauliches Bild von unseren Mobilitätsdaten.</p>
 
 	<ul>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/transit_stations_with_served_routes/">MobiData BW® - Bahnhöfe und Haltestellen (mobidata-bw.de)</a></li>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/transit_stops/">MobiData BW® - Haltesteige (mobidata-bw.de)</a></li>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/transit_shapes_with_routes/">MobiData BW® - ÖPNV-Linien (mobidata-bw.de)</a></li>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/sharing_car/">MobiData BW® - Carsharing-Stationen und -Fahrzeuge (mobidata-bw.de)</a></li>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/sharing_bicycle/">MobiData BW® - Bikesharing-Stationen und -Fahrzeuge (mobidata-bw.de)</a></li>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/sharing_cargo_bicycle/">MobiData BW® - Lastenrad-Leihstationen und -Fahrzeuge (mobidata-bw.de)</a></li>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/sharing_scooters/">MobiData BW® - Scootersharing-Stationen und -Fahrzeuge (mobidata-bw.de)</a></li>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/parking_sites/">MobiData BW® - Parkhäuser und -plätze (mobidata-bw.de)</a></li>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/charge_points/">MobiData BW® - E-Ladesäulen (mobidata-bw.de)</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/transit_stations_with_served_routes/">MobiData BW® - Bahnhöfe und Haltestellen</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/transit_stops/">MobiData BW® - Haltesteige</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/transit_shapes_with_routes/">MobiData BW® - ÖPNV-Linien</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/sharing_car/">MobiData BW® - Carsharing-Stationen und -Fahrzeuge</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/sharing_bicycle/">MobiData BW® - Bikesharing-Stationen und -Fahrzeuge</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/sharing_cargo_bicycle/">MobiData BW® - Lastenrad-Leihstationen und -Fahrzeuge</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/sharing_scooters/">MobiData BW® - Scootersharing-Stationen und -Fahrzeuge</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/parking_sites/">MobiData BW® - Parkhäuser und -plätze</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/charge_points/">MobiData BW® - E-Ladesäulen</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/roadworks/">MobiData BW® - Arbeitsstellen</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/radvis_cycle_network/">MobiData BW® - RadNETZ BW</a></li>
 	</ul>
 </div>
 </body>
