--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -31,6 +31,8 @@
 
 	<p>So liefert etwa der Endpunkt <a href="/gtfs/stops"><code>/gtfs/stops</code></a> alle ÖPNV inkl. SPNV Haltestellen, die von Bussen/Zügen in Baden-Württemberg aus erreichbar sind.</p>
 
+	<p>Die GTFS-API nutzt die <a href="https://postgrest.org/en/v12/references/api/tables_views.html#operators">PostgREST Filter Operatoren</a> um z.B. namensbasiert nach Haltestellen <a href="/gtfs/stops?stop_name=like.Stuttgart*"><code>/gtfs/stops?stop_name=like.Stuttgart*</code></a> zu suchen.</p>
+
 	<h2>Sharing-Daten</h2>
 
 	<p>Daten von Autos, Leihfahrrädern, Lastenrädern und E-Scootern werden über den gebündelten GBFS-Feed <a href="/sharing/gbfs"><code>/sharing/gbfs</code></a> publiziert, der seinerseits GBFS-Feeds für die einzelnen Provider aggregiert.</p>
