--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -23,7 +23,7 @@
 
 	<p><strong>Die Endpunkte der Integrationsplattform benötigen keine Zugangsdaten und sind für alle offen verfügbar.</strong></p>
 
-	<p>Die Integrationsplattform ist <a href="https://github.com/mobidata-bw">auf GitHub</a> archiviert und dokumentiert.</p>
+	<p>Die Integrationsplattform ist <a href="https://github.com/mobidata-bw">auf GitHub</a> archiviert und dokumentiert. Das <a href="https://github.com/mobidata-bw/ipl-orchestration/blob/main/CHANGELOG.md">Changelog</a> protokolliert wichtige Änderungen.</p>
 
 	<h2>Soll-Fahrplandaten des öffentlichen Personennahverkehrs</h2>
 
