link to new parking maps

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -73,7 +73,8 @@
 		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/maps/sharing_bicycle/">MobiData BW® - Bikesharing-Stationen und -Fahrzeuge</a></li>
 		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/maps/sharing_cargo_bicycle/">MobiData BW® - Lastenrad-Leihstationen und -Fahrzeuge</a></li>
 		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/maps/sharing_scooters/">MobiData BW® - Scootersharing-Stationen und -Fahrzeuge</a></li>
-		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/maps/parking_sites/">MobiData BW® - Parkhäuser und -plätze</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/maps/parking_sites_car/">MobiData BW® - Parkhäuser und -plätze</a></li>
+		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/maps/parking_sites_bicycle/">MobiData BW® - Fahrradabstellanlagen</a></li>
 		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/maps/charge_points/">MobiData BW® - E-Ladesäulen</a></li>
 		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/maps/roadworks/">MobiData BW® - Arbeitsstellen</a></li>
 		<li><a href="https://www.mobidata-bw.de/daten/darstellung/ipl/maps/radvis_cycle_network/">MobiData BW® - RadNETZ BW</a></li>
