link to gbfs validation result

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -37,6 +37,8 @@
 
 	<p>Daten von Autos, Leihfahrrädern, Lastenrädern und E-Scootern werden über den gebündelten GBFS-Feed <a href="/sharing/gbfs"><code>/sharing/gbfs</code></a> publiziert, der seinerseits GBFS-Feeds für die einzelnen Provider aggregiert.</p>
 
+	<p>Der Endpunkt <a href="/sharing/validation/systems"><code>/sharing/validation/systems</code></a> liefert das Validierungsergebnis dieser GBFS-Feeds.</p>
+
 	<h2>Parkdaten</h2>
 
 	<p>Parkdaten verschiedener Städte und Parkhausbetreiber werden über die <a href="/park-api/documentation/public.html">ParkAPI</a> publiziert.</p>
