Update link to GTFS-API doc

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -27,7 +27,7 @@
 
 	<h2>Soll-Fahrplandaten des öffentlichen Personennahverkehrs</h2>
 
-	<p>Die Soll-Fahrplandaten des öffentlichen Personennahverkehrs (ÖPNV inkl. SPNV) in Baden-Württemberg werden über die <a href="/gtfs">GTFS-API</a> publiziert.</p>
+	<p>Die Soll-Fahrplandaten des öffentlichen Personennahverkehrs (ÖPNV inkl. SPNV) in Baden-Württemberg werden über die <a href="/docs/gtfs/">GTFS-API</a> publiziert.</p>
 
 	<p>So liefert etwa der Endpunkt <a href="/gtfs/stops"><code>/gtfs/stops</code></a> alle ÖPNV inkl. SPNV Haltestellen, die von Bussen/Zügen in Baden-Württemberg aus erreichbar sind.</p>
 
