--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -68,9 +68,7 @@
 	<p>Aktuelle Karten basierend auf den folgenden Geoserver Layern vermitteln ein anschauliches Bild von unseren Mobilitätsdaten.</p>
 
 	<ul>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/transit_stations_with_served_routes/">MobiData BW® - Bahnhöfe und Haltestellen</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/transit_stops/">MobiData BW® - Haltesteige</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/transit_shapes_with_routes/">MobiData BW® - ÖPNV-Linien</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/gtfs/">MobiData BW® - Fahrplandaten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_car/">MobiData BW® - Carsharing-Stationen und -Fahrzeuge</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_bicycle/">MobiData BW® - Bikesharing-Stationen und -Fahrzeuge</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_cargo_bicycle/">MobiData BW® - Lastenrad-Leihstationen und -Fahrzeuge</a></li>
