update map names

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -68,16 +68,16 @@
 	<p>Aktuelle Karten basierend auf den folgenden Geoserver Layern vermitteln ein anschauliches Bild von unseren Mobilitätsdaten.</p>
 
 	<ul>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/gtfs/">MobiData BW® - Fahrplandaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_car/">MobiData BW® - Carsharing-Stationen und -Fahrzeuge</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_bicycle/">MobiData BW® - Bikesharing-Stationen und -Fahrzeuge</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_cargo_bicycle/">MobiData BW® - Lastenrad-Leihstationen und -Fahrzeuge</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_scooters/">MobiData BW® - Scootersharing-Stationen und -Fahrzeuge</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/parking_sites_car/">MobiData BW® - Parkhäuser und -plätze</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/parking_sites_bicycle/">MobiData BW® - Fahrradabstellanlagen</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - E-Ladesäulen</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Arbeitsstellen</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/radvis_cycle_network/">MobiData BW® - RadNETZ BW</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/gtfs/">MobiData BW® - Gebündelte Fahrplandaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_car/">MobiData BW® - Gebündelte Carsharingdaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_bicycle/">MobiData BW® - Gebündelte Bikesharingdaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_cargo_bicycle/">MobiData BW® - Gebündelte Lastenrad-Sharingdaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_scooters/">MobiData BW® - Gebündelte Scootersharingdaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/parking_sites_car/">MobiData BW® - Gebündelte Parkdaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/parking_sites_bicycle/">MobiData BW® - Gebündelte Fahrradabstellanlagen</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - Ladesäulenregister</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Baustelleninformationen</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/radvis_cycle_network/">MobiData BW® - RadNETZ Baden-Württemberg</a></li>
 	</ul>
 </div>
 </body>
