--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -31,6 +31,8 @@
 
 	<p>So liefert etwa der Endpunkt <a href="/gtfs/stops"><code>/gtfs/stops</code></a> alle ÖPNV inkl. SPNV Haltestellen, die von Bussen/Zügen in Baden-Württemberg aus erreichbar sind.</p>
 
+	<p>Der Endpunkt <a href="/gtfs/feed_info"><code>/gtfs/feed_info</code></a> zeigt u.a. die Gültigkeitsdauer der Fahrplandaten, und <a href="/gtfs/rpc/gtfs_data_imported_at"><code>/gtfs/rpc/gtfs_data_imported_at</code></a> zeigt das Datum des letzten GTFS Imports.</p>
+
 	<p>Die GTFS-API nutzt <a href="https://postgrest.org/en/v12/references/api/tables_views.html#operators">PostgREST Filter Operatoren</a> um z.B. namensbasiert nach Haltestellen wie <a href="/gtfs/stops?stop_name=like.Stuttgart*"><code>/gtfs/stops?stop_name=like.Stuttgart*</code></a> oder <a href="/gtfs/stops?stop_name=eq.Stuttgart Hauptbahnhof (oben) Gleis 1"><code>/gtfs/stops?stop_name=eq.Stuttgart Hauptbahnhof (oben) Gleis 1</code></a> zu suchen.</p>
 
 	<h2>Sharing-Daten</h2>
