document parking-spots

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -45,7 +45,9 @@
 
 	<p>Parkdaten verschiedener Städte und Parkhausbetreiber werden über die <a href="/park-api/documentation/public.html">ParkAPI</a> publiziert.</p>
 
-	<p>Die Endpunkte <a href="/park-api/api/public/v3/parking-sites"><code>/park-api/api/public/v3/parking-sites</code></a> und <a href="/park-api/api/public/datex2/json"><code>/park-api/api/public/datex2/json</code></a> liefern diese Daten im ParkAPI Format und im Datex II Lite Format.</p>
+	<p>Die Endpunkte <a href="/park-api/api/public/v3/parking-sites"><code>/park-api/api/public/v3/parking-sites</code></a> und <a href="/park-api/api/public/datex2/json"><code>/park-api/api/public/datex2/json</code></a> liefern die Daten von Parkplätzen und Parkbauten im ParkAPI Format und im Datex II Lite Format.</p>
+
+	<p>Der Endpunkt <a href="/park-api/api/public/v3/parking-spots"><code>/park-api/api/public/v3/parking-spots</code></a> liefert die Daten von Einzelparkplätzen im ParkAPI Format.</p>
 
 	<h2>Ladesäulendaten</h2>
 
