--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -77,9 +77,9 @@
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_bicycle/">MobiData BW® - Gebündelte Bikesharingdaten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_cargo_bicycle/">MobiData BW® - Gebündelte Lastenrad-Sharingdaten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_scooter/">MobiData BW® - Gebündelte Scootersharingdaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_car_buildings/">MobiData BW® - Gebündelte Parkdaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_car_buildings/">MobiData BW® - Gebündelte Parkplätze und Parkbauten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_bicycle/">MobiData BW® - Gebündelte Fahrradabstellanlagen</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - Ladesäulenregister</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - Gebündelte Ladesäuledaten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Baustelleninformationen</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/radvis_cycle_network/">MobiData BW® - RadNETZ Baden-Württemberg</a></li>
 	</ul>
