--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -78,6 +78,7 @@
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_cargo_bicycle/">MobiData BW® - Gebündelte Lastenrad-Sharingdaten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_scooter/">MobiData BW® - Gebündelte Scootersharingdaten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_car_buildings/">MobiData BW® - Gebündelte Parkplätze und Parkbauten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_car_on-street/">MobiData BW® - Gebündelte Straßen-Parkplätze</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_bicycle/">MobiData BW® - Gebündelte Fahrradabstellanlagen</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - Gebündelte Ladesäuledaten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Baustelleninformationen</a></li>
