--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -49,9 +49,13 @@
 
 	<p>Der Endpunkt <a href="/park-api/api/public/v3/parking-spots"><code>/park-api/api/public/v3/parking-spots</code></a> liefert die Daten von Einzelparkplätzen im ParkAPI Format.</p>
 
+	<p>Der Endpunkt <a href="/park-api/metrics"><code>/park-api/metrics</code></a> liefert die ParkAPI Metriken.</p>
+	
 	<h2>Ladesäulendaten</h2>
 
 	<p>Ladesäulendaten werden über die <a href="/ocpdb/documentation/public.html">Open ChargePoint DataBase (OCPDB)</a> publiziert, wobei der Endpunkt <a href="/ocpdb/api/public/v1/locations"><code>/ocpdb/api/public/v1/locations</code></a> detaillierte Informationen aller Ladesäulen aufführt.</p>
+
+	<p>Der Endpunkt <a href="/ocpdb/metrics"><code>/ocpdb/metrics</code></a> liefert die OCPDB Metriken.</p>
 
 	<h2>Verkehrsmeldungen</h2>
 
