ParkAPI Push Endpunkte

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -50,6 +50,8 @@
 	<p>Der Endpunkt <a href="/park-api/api/public/v3/parking-spots"><code>/park-api/api/public/v3/parking-spots</code></a> liefert die Daten von Einzelparkplätzen im ParkAPI Format.</p>
 
 	<p>Der Endpunkt <a href="/park-api/metrics"><code>/park-api/metrics</code></a> liefert die ParkAPI Metriken.</p>
+
+	<p>Neben diesen Pull Endpunkten stehen auch abgesicherte <a href="/park-api/documentation/admin.html">ParkAPI Push Endpunkte</a> für unterschiedliche Formate zur Verfügung.</p>
 	
 	<h2>Ladesäulendaten</h2>
 
