--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -78,16 +78,16 @@
 	<p>Aktuelle Karten basierend auf den folgenden Geoserver Layern vermitteln ein anschauliches Bild von unseren Mobilitätsdaten.</p>
 
 	<ul>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/gtfs/">MobiData BW® - Gebündelte Fahrplandaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_car/">MobiData BW® - Gebündelte Carsharingdaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_bicycle/">MobiData BW® - Gebündelte Bikesharingdaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_cargo_bicycle/">MobiData BW® - Gebündelte Lastenrad-Sharingdaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_scooter/">MobiData BW® - Gebündelte Scootersharingdaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/gtfs/">MobiData BW® - Gebündelte Soll-Fahrplandaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_car/">MobiData BW® - Gebündelte Carsharing-Daten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_bicycle/">MobiData BW® - Gebündelte Bike- und Lastenrad-Sharingdaten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_moped/">MobiData BW® - Gebündelte Mopedsharing-Daten</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_scooter/">MobiData BW® - Gebündelte E-Scooter-Sharingdaten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_car_buildings/">MobiData BW® - Gebündelte Parkplätze und Parkbauten</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_car_on-street/">MobiData BW® - Gebündelte Straßen-Parkplätze</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_bicycle/">MobiData BW® - Gebündelte Fahrradabstellanlagen</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - Gebündelte Ladesäuledaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Baustelleninformationen</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - Gebündelte E-Ladesäulen</a></li>
+		<li><a href="https://www.mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Baustellen</a></li>
 		<li><a href="https://www.mobidata-bw.de/karten/ipl/radvis_cycle_network/">MobiData BW® - RadNETZ Baden-Württemberg</a></li>
 	</ul>
 </div>
