update map links

--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -78,17 +78,23 @@
 	<p>Aktuelle Karten basierend auf den folgenden Geoserver Layern vermitteln ein anschauliches Bild von unseren Mobilitätsdaten.</p>
 
 	<ul>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/gtfs/">MobiData BW® - Gebündelte Soll-Fahrplandaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_car/">MobiData BW® - Gebündelte Carsharing-Daten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_bicycle/">MobiData BW® - Gebündelte Bike- und Lastenrad-Sharingdaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_moped/">MobiData BW® - Gebündelte Mopedsharing-Daten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/sharing_scooter/">MobiData BW® - Gebündelte E-Scooter-Sharingdaten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_car_buildings/">MobiData BW® - Gebündelte Parkplätze und Parkbauten</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_car_on-street/">MobiData BW® - Gebündelte Straßen-Parkplätze</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/park-api_bicycle/">MobiData BW® - Gebündelte Fahrradabstellanlagen</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - Gebündelte E-Ladesäulen</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Baustellen</a></li>
-		<li><a href="https://www.mobidata-bw.de/karten/ipl/radvis_cycle_network/">MobiData BW® - RadNETZ Baden-Württemberg</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/gtfs/">MobiData BW® - Gebündelte Soll-Fahrplandaten</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/sharing/?form_factor=car">MobiData BW® - Gebündelte Carsharing-Daten</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/sharing/?form_factor=bicycle">MobiData BW® - Gebündelte Bikesharing-Daten</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/sharing/?form_factor=cargo_bicycle">MobiData BW® - Gebündelte Lastenrad-Sharingdaten</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/sharing/?form_factor=scooter">MobiData BW® - Gebündelte E-Scooter-Sharingdaten</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/sharing/?form_factor=moped">MobiData BW® - Gebündelte E-Kleinkraftrad-Sharingdaten</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/park-api/?purpose=car">MobiData BW® - Gebündelte Parkdaten (Parkplätze, Parkbauten, Straßen-Parkplätze)</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/park-api/?purpose=car&type=buildings">MobiData BW® - Gebündelte Parkdaten (Parkplätze, Parkbauten)</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/park-api/?purpose=car&type=on_street">MobiData BW® - Gebündelte Parkdaten (Straßen-Parkplätze)</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/park-api/?purpose=car&geometry=line">MobiData BW® - Gebündelte Parkdaten (Linien)</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/park-api/?purpose=car&geometry=polygon">MobiData BW® - Gebündelte Parkdaten (Polygone)</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/park-api/?purpose=car&object=site">MobiData BW® - Gebündelte Parkplätze (mit Kapazität)</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/park-api/?purpose=car&object=spot">MobiData BW® - Gebündelte Einzelparkplätze (keine Kapazität)</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/park-api/?purpose=bicycle">MobiData BW® - Gebündelte Fahrradabstellanlagen</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - Gebündelte E-Ladesäulen</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Baustellen</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/radvis_cycle_network/">MobiData BW® - RadNETZ Baden-Württemberg</a></li>
 	</ul>
 </div>
 </body>
