--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -96,6 +96,100 @@
 		<li><a href="https://mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Baustellen</a></li>
 		<li><a href="https://mobidata-bw.de/karten/ipl/radvis_cycle_network/">MobiData BW® - RadNETZ Baden-Württemberg</a></li>
 	</ul>
+
+	<h2>Parkdaten Quellen</h2>
+
+	<p><strong>Parkhäuser</strong></p>
+
+	<ul>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=apcoa">apcoa</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=bahn_v2">bahn_v2</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=bb_parkhaus">bb_parkhaus</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=goldbeck">goldbeck</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=huefner">huefner</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=pbw">pbw</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=stuttgart_carparks">stuttgart_carparks</a></li>
+	</ul>
+
+	<p><strong>P+M</strong></p>
+
+	<ul>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=pum_bw">pum_bw</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=p_m_bw">p_m_bw</a></li>
+	</ul>
+
+	<p><strong>P+R</strong></p>
+
+	<ul>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrn_p_r">vrn_p_r</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrs-p-r">vrs-p-r</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrs_bondorf">vrs_bondorf</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrs_kirchheim">vrs_kirchheim</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrs_neustadt">vrs_neustadt</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrs_vaihingen">vrs_vaihingen</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=freiburg_p_r_static">freiburg_p_r_static</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=freiburg_p_r_sensors">freiburg_p_r_sensors</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=bfrk_bw_bike">bfrk_bw_bike</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=bfrk_bw_car">bfrk_bw_car</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=opendata_swiss">opendata_swiss</a></li>
+	</ul>
+
+	<p><strong>Städte</strong></p>
+
+	<ul>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=aalen">aalen</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=bietigheim_bissingen">bietigheim_bissingen</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=buchen">buchen</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=ellwangen">ellwangen</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=esslingen">esslingen</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=freiburg">freiburg</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=freiburg_scanner">freiburg_scanner</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=heidelberg">heidelberg</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=heidelberg_easypark">heidelberg_easypark</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=herrenberg">herrenberg</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=karlsruhe">karlsruhe</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=keltern">keltern</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=konstanz">konstanz</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=ladenburg_parkraumcheck">ladenburg_parkraumcheck</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=mannheim">mannheim</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=neckarsulm">neckarsulm</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=pforzheim">pforzheim</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=radolfzell">radolfzell</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=reutlingen">reutlingen</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=ulm_sensors">ulm_sensors</a></li>
+	</ul>
+
+	<p<strong>Einzelparkplätze</strong></p>
+
+	<ul>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=freiburg_disabled_static">freiburg_disabled_static</a></li>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=freiburg_disabled_sensors">freiburg_disabled_sensors</a></li>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=friedrichshafen_sensors">friedrichshafen_sensors</a></li>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=heidelberg_disabled">heidelberg_disabled</a></li>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=karlsruhe_disabled">karlsruhe_disabled</a></li>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=konstanz_disabled">konstanz_disabled</a></li>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=mannheim_disabled">mannheim_disabled</a></li>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=reutlingen_disabled">reutlingen_disabled</a></li>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=ulm_sensors">ulm_sensors</a></li>
+	</ul>
+
+	<p<strong>Radparken</strong></p>
+
+	<ul>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_stuttgart">kienzler_stuttgart</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_offenburg">kienzler_offenburg</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_ulm">kienzler_ulm</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid==kienzler_vrn">=kienzler_vrn</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_vvs">kienzler_vvs</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_bike_and_ride">kienzler_bike_and_ride</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_rad_safe">kienzler_rad_safe</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=velobrix">velobrix</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=radvis_bw">radvis_bw</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=herrenberg_bike">herrenberg_bike</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=karlsruhe_bike">karlsruhe_bike</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=konstanz_bike">konstanz_bike</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=reutlingen_bike">reutlingen_bike</a></li>
+	</ul>
 </div>
 </body>
 </html>
