--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -159,7 +159,7 @@
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=ulm_sensors">ulm_sensors</a></li>
 	</ul>
 
-	<p<strong>Einzelparkplätze</strong></p>
+	<p></p><strong>Einzelparkplätze</strong></p>
 
 	<ul>
 		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=freiburg_disabled_static">freiburg_disabled_static</a></li>
@@ -173,7 +173,7 @@
 		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=ulm_sensors">ulm_sensors</a></li>
 	</ul>
 
-	<p<strong>Radparken</strong></p>
+	<p></p><strong>Radparken</strong></p>
 
 	<ul>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_stuttgart">kienzler_stuttgart</a></li>
