--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -179,7 +179,7 @@
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_stuttgart">kienzler_stuttgart</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_offenburg">kienzler_offenburg</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_ulm">kienzler_ulm</a></li>
-		<li><a href="/park-api/api/public/v3/parking-sites?source_uid==kienzler_vrn">=kienzler_vrn</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_vrn">kienzler_vrn</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_vvs">kienzler_vvs</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_bike_and_ride">kienzler_bike_and_ride</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=kienzler_rad_safe">kienzler_rad_safe</a></li>
