--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -190,6 +190,19 @@
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=konstanz_bike">konstanz_bike</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=reutlingen_bike">reutlingen_bike</a></li>
 	</ul>
+
+	<h2>Ladesäulendaten Quellen</h2>
+
+	<ul>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=bnetza_api&limit=1000">bnetza_api</a></li>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_stuttgart&limit=1000">chargecloud_stuttgart</a></li>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_pforzheim">chargecloud_pforzheim</a></li>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_tuebingen">chargecloud_tuebingen</a></li>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=ochp_albwerk">ochp_albwerk</a></li>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=heilbronn_neckarbogen">heilbronn_neckarbogen</a></li>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=opendata_swiss&limit=1000"opendata_swiss</a></li>
+	</ul>
+	
 </div>
 </body>
 </html>
