--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -200,7 +200,7 @@
 		<li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_tuebingen">chargecloud_tuebingen</a></li>
 		<li><a href="/ocpdb/api/public/v1/locations?source_uid=ochp_albwerk">ochp_albwerk</a></li>
 		<li><a href="/ocpdb/api/public/v1/locations?source_uid=heilbronn_neckarbogen">heilbronn_neckarbogen</a></li>
-		<li><a href="/ocpdb/api/public/v1/locations?source_uid=opendata_swiss&limit=1000"opendata_swiss</a></li>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=opendata_swiss&limit=1000">opendata_swiss</a></li>
 	</ul>
 	
 </div>
