--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -78,6 +78,7 @@
 	<p>Aktuelle Karten basierend auf den folgenden Geoserver Layern vermitteln ein anschauliches Bild von unseren Mobilitätsdaten.</p>
 
 	<ul>
+		<li><a href="https://mobidata-bw.de/karten/gebuendelte_daten/">MobiData BW® - Gebündelte Daten (Soll-Fahrplandaten, Sharing-Daten, Parkdaten, E-Ladesäulen, Baustellen, Radnetze)</a></li>
 		<li><a href="https://mobidata-bw.de/karten/ipl/gtfs/">MobiData BW® - Gebündelte Soll-Fahrplandaten</a></li>
 		<li><a href="https://mobidata-bw.de/karten/ipl/sharing/?form_factor=car">MobiData BW® - Gebündelte Carsharing-Daten</a></li>
 		<li><a href="https://mobidata-bw.de/karten/ipl/sharing/?form_factor=bicycle">MobiData BW® - Gebündelte Bikesharing-Daten</a></li>
