--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -96,6 +96,7 @@
 		<li><a href="https://mobidata-bw.de/karten/ipl/charge_points/">MobiData BW® - Gebündelte E-Ladesäulen</a></li>
 		<li><a href="https://mobidata-bw.de/karten/ipl/roadworks/">MobiData BW® - Baustellen</a></li>
 		<li><a href="https://mobidata-bw.de/karten/ipl/radvis_cycle_network/">MobiData BW® - RadNETZ Baden-Württemberg</a></li>
+		<li><a href="https://mobidata-bw.de/karten/ipl/webcam/">MobiData BW® - Webcam-Bilder</a></li>
 	</ul>
 
 	<h2>Parkdaten Quellen</h2>
