--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -39,7 +39,7 @@
 
 	<p>Daten von Autos, Leihfahrrädern, Lastenrädern und E-Scootern werden über den gebündelten GBFS-Feed <a href="/sharing/gbfs"><code>/sharing/gbfs</code></a> publiziert, der seinerseits GBFS-Feeds für die einzelnen Provider aggregiert.</p>
 
-	<p>Der Endpunkt <a href="/sharing/validation/systems"><code>/sharing/validation/systems</code></a> liefert das Validierungsergebnis dieser GBFS-Feeds.</p>
+	<p>Der Endpunkt <a href="/sharing/validation/systems"><code>/sharing/validation/systems</code></a> liefert das Validierungsergebnis dieser GBFS-Feeds, <a href="/sharing/graphiql?path=/sharing/graphql"><code>/sharing/graphiql?path=/sharing/graphql</code></a> bietet eine GraphQL Schnittstelle an.</p>
 
 	<h2>Parkdaten</h2>
 
