--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -195,6 +195,7 @@
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=karlsruhe_bike">karlsruhe_bike</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=konstanz_bike">konstanz_bike</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=reutlingen_bike">reutlingen_bike</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=freiburg_vag_bike">freiburg_vag_bike</a></li>
 	</ul>
 
 	<h2>Ladesäulendaten Quellen</h2>
